syntax = "proto3";

option csharp_namespace = "TinCanPhone.Server";

package tincan;

service Receiver {

  rpc HandleUnaryMessages (RequestMessage) returns (ResponseMessage);
}

message RequestMessage {
  string message = 1;
}

message ResponseMessage {
  string response = 1;
}
